feat: Add "Open in Maps" button for adventures with location coordinates

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -113,6 +113,7 @@
 		"copy_link": "Copy Link",
 		"image": "Image",
 		"upload_image": "Upload Image",
+		"open_in_maps": "Open in Maps",
 		"url": "URL",
 		"fetch_image": "Fetch Image",
 		"wikipedia": "Wikipedia",
