fix: fixing Chinese translation with context

--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -37,8 +37,8 @@
     "about": "关于",
     "license": "根据 GPL-3.0 许可证授权。",
     "message": "在美国用 ❤️ 制作。",
-    "nominatim_1": "位置搜索和地理编码由以下提供：",
-    "nominatim_2": "他们的数据根据ODbL许可证授权。",
+    "nominatim_1": "位置搜索和地理编码由",
+    "nominatim_2": "提供。他们的数据根据ODbL许可证授权。",
     "oss_attributions": "开源声明",
     "other_attributions": "其他声明可以在 README 文件中找到。",
     "source_code": "源代码",
@@ -96,7 +96,7 @@
     "order_direction": "排序方向",
     "ascending": "升序",
     "descending": "降序",
-    "updated": "已更新",
+    "updated": "更新",
     "name": "名称",
     "date": "日期",
     "activity_types": "活动类型",
@@ -204,7 +204,7 @@
     "basic_information": "基本信息",
     "no_adventures_to_recommendations": "未找到冒险。添加至少一个冒险以获得推荐。",
     "display_name": "显示名称",
-    "adventure_not_found": "没有冒险可显示。\n使用右下角的加号按钮添加一些，或尝试更改筛选条件！",
+    "adventure_not_found": "没找到任何冒险。使用右下角的加号按钮添加一些，或尝试更改筛选条件！",
     "no_adventures_found": "未找到冒险",
     "mark_region_as_visited": "将地区 {region}, {country} 标记为已访问？",
     "mark_visited": "标记为已访问",
@@ -257,7 +257,7 @@
     "location_details": "位置详情",
     "city": "城市",
     "region": "地区",
-    "md_instructions": "在此输入您的 Markdown...",
+    "md_instructions": "可以使用 Markdown 在此输入您的笔记。",
     "days": "天",
     "attachment_upload_success": "附件上传成功！",
     "attachment_upload_error": "上传附件时出错",
@@ -266,7 +266,7 @@
     "attachment_update_success": "附件更新成功！",
     "attachment_name": "附件名称",
     "gpx_tip": "上传 GPX 文件到附件以便在地图上查看它们！",
-    "welcome_map_info": "此服务器上的公共冒险",
+    "welcome_map_info": "此服务器上的公开冒险",
     "attachment_update_error": "更新附件时出错",
     "activities": {
       "general": "通用 🌍",
@@ -340,8 +340,8 @@
     "new_password": "新密码（6个字符以上）",
     "reset_failed": "重置密码失败",
     "or_3rd_party": "或使用第三方服务登录",
-    "no_public_adventures": "未找到公共冒险",
-    "no_public_collections": "未找到公共合集",
+    "no_public_adventures": "未找到公开冒险",
+    "no_public_collections": "未找到公开合集",
     "user_adventures": "用户冒险",
     "user_collections": "用户合集"
   },
@@ -412,7 +412,7 @@
     "verify": "验证",
     "verify_email_error": "验证邮箱时出错。\n几分钟后重试。",
     "verify_email_success": "邮箱验证发送成功！",
-    "add_email_blocked": "无法为启用双因素认证的账户添加邮箱。",
+    "add_email_blocked": "无法为启用多重身份验证的账户添加邮箱。",
     "required": "此字段为必填项",
     "csrf_failed": "获取 CSRF 令牌失败",
     "duplicate_email": "该邮箱已被使用。",
@@ -422,7 +422,7 @@
     "documentation_link": "文档链接",
     "launch_account_connections": "管理账户连接",
     "launch_administration_panel": "进入管理面板",
-    "no_verified_email_warning": "您必须拥有经过验证的邮箱地址才能启用双因素身份验证。",
+    "no_verified_email_warning": "您必须拥有已验证的邮箱地址才能启用多重身份验证。",
     "social_auth_desc": "为您的帐户启用或禁用社交和 OIDC 身份验证提供商。\n这些连接允许您使用自托管身份验证身份提供商（如 Authentik）或第三方提供商（如 GitHub）登录。",
     "social_auth_desc_2": "这些设置在 AdventureLog 服务器中进行管理，并且必须由管理员手动启用。",
     "social_oidc_auth": "社交与 OIDC 认证",
@@ -482,7 +482,7 @@
     "modes": {
       "bike": "自行车",
       "boat": "船",
-      "bus": "公共汽车",
+      "bus": "巴士/公车",
       "car": "汽车",
       "other": "其他",
       "plane": "飞机",
@@ -548,13 +548,13 @@
   },
   "dashboard": {
     "add_some": "为什么不开始计划你的下一次冒险呢？\n您可以通过单击下面的按钮添加新的冒险。",
-    "countries_visited": "访问过的国家",
-    "no_recent_adventures": "最近没有冒险吗？",
+    "countries_visited": "已访问国家数量",
+    "no_recent_adventures": "最近不去冒险吗？",
     "recent_adventures": "最近的冒险",
-    "total_adventures": "全面冒险",
+    "total_adventures": "冒险总数",
     "total_visited_regions": "已访问地区数量",
     "welcome_back": "欢迎回来",
-    "total_visited_cities": "访问过的城市数量"
+    "total_visited_cities": "已访问城市数量"
   },
   "immich": {
     "api_key": "Immich API 密钥",
