--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -246,7 +246,8 @@
     "price": "Prix",
     "region": "Région",
     "reservation_number": "Numéro de réservation",
-    "welcome_map_info": "Aventures publiques sur ce serveur"
+    "welcome_map_info": "Aventures publiques sur ce serveur",
+    "open_in_maps": "Ouvert dans les cartes"
   },
   "home": {
     "desc_1": "Découvrez, planifiez et explorez en toute simplicité",
