--- a/frontend/src/locales/sv.json
+++ b/frontend/src/locales/sv.json
@@ -246,7 +246,8 @@
     "lodging_information": "Logi information",
     "price": "Pris",
     "region": "Område",
-    "reservation_number": "Bokningsnummer"
+    "reservation_number": "Bokningsnummer",
+    "open_in_maps": "Kappas in"
   },
   "home": {
     "desc_1": "Upptäck, planera och utforska med lätthet",
